Structure, home and auth panels