@@ -3,7 +3,10 @@
                  [org.clojure/clojurescript "1.9.908"]
                  [reagent "0.7.0"]
                  [re-frame "0.10.2"]
+                 [binaryage/devtools "0.9.4"]
                  [secretary "1.2.3"]]
+
+  :jvm-opts ["--add-modules" "java.xml.bind"]
 
   :plugins [[lein-cljsbuild "1.1.5"]]
 
@@ -27,7 +30,7 @@
    {:dependencies [[binaryage/devtools "0.9.4"]
                    [cljsjs/d3 "4.3.0-5"]
                    [day8.re-frame/trace "0.1.7"]
-                   
+
                    [figwheel-sidecar "0.5.13"]
                    [com.cemerick/piggieback "0.2.2"]]
 
@@ -47,8 +50,8 @@
                     :preloads             [devtools.preload
                                            day8.re-frame.trace.preload]
                     :closure-defines      {"re_frame.trace.trace_enabled_QMARK_" true}
-                    :external-config      {:devtools/config {:features-to-install :all}}
-                    }}
+                    :external-config      {:devtools/config {:features-to-install :all}}}}
+
 
     {:id           "min"
      :source-paths ["src/cljs"]
@@ -56,9 +59,4 @@
                     :output-to       "resources/public/js/compiled/app.js"
                     :optimizations   :advanced
                     :closure-defines {goog.DEBUG false}
-                    :pretty-print    false}}
-
-
-    ]}
-
-  )
+                    :pretty-print    false}}]})
